Tests/project2/errors/writeexpr.flm
/* This tests for invalid expressions in write */

fun foo()
    begin
    write("Hello World")
    end


        
